--- a/index.html
+++ b/index.html
@@ -5,103 +5,124 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple iPhone Layout</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+<script src="javascript.js" defer></script>
  
 </head>
-<body>
-  <div class="iphone">
-    <div class="iphone-header">
-        <div class="iphone-status">
-            <span class="time">10:00 </span> <!-- Time -->
+<body >
+  <div class="iphone ">
+    <div class="iphone-header normal-content">
+        <div class="iphone-status ">
+            <span class="time" id="clock">00:00</span> <!-- Time -->
             <span class="status-icon"><i class="fas fa-signal"></i></span> <!-- Cellular icon -->
             <span class="status-icon"><i class="fas fa-wifi"></i></span> <!-- Wi-Fi icon -->
             <span class="status-icon"><i class="fas fa-battery-full"></i></span> <!-- Battery icon -->
           </div>
         <div class="iphone-camera"></div></div>
     
-    <div class="iphone-screen">
+    <div class="iphone-screen normal-content"  >
       <div class="iphone-icons">
         <!-- Start of App Icons -->
         <div class="app-icon">
-            <img src="icon.png" alt="">
-            <p>App 7</p>
+            <img src="iphonebackground.png" alt="">
+            <button  id=blank-button class="app-button"></button>
+            <p>App</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>App</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>App</p>
           </div>
         <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>App</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
         <div class="app-icon">
-            <img src="placeholder-icon6.png" alt="">
-            <p>App 7</p>
-          </div>
-          <div class="app-icon">
-            <img src="placeholder-icon6.png" alt="">
-            <p>App 7</p>
-          </div>
-          <div class="app-icon">
-            <img src="placeholder-icon6.png" alt="">
-            <p>App 7</p>
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>App</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>App</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
-          </div>
-          <div class="app-icon">
-            <img src="placeholder-icon6.png" alt="">
-            <p>App 7</p>
-          </div>
-          <div class="app-icon">
-            <img src="placeholder-icon6.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
             <img src="icon.png" alt="">
-            <p>App 7</p>
+            <button class="app-button"></button>
+            <p>app</p>
+          </div>
+          <div class="app-icon">
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>app</p>
+          </div>
+          <div class="app-icon">
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>app</p>
+          </div>
+          <div class="app-icon">
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>app</p>
+          </div>
+          <div class="app-icon">
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
 
       </div>
@@ -111,38 +132,44 @@
 
 
       <div class="empty-row">
-        <div class="iphone-search" style="font-size: 10px;">search</div></div>
+        <div class="iphone-search" style="font-size: 10px;">Search</div>
+      </div>
       <!-- Row of apps at the bottom -->
 
-      <div class="bottom-apps">
+      <div class="bottom-apps-wrapper normal-content">
+      <div class="bottom-apps normal-content">
         <!-- Add app icons for the bottom row -->
         <div class="app-icon">
-          <img src="placeholder-icon25.png" alt="">
-          <p>App 25</p>
+          <img src="icon.png" alt="">
+          <button class="app-button"></button>
+          <p>app</p>
         </div>
         <div class="app-icon">
-            <img src="placeholder-icon25.png" alt="">
-            <p>App 25</p>
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
-            <img src="placeholder-icon25.png" alt="">
-            <p>App 25</p>
+            <img src="icon.png" alt="">
+            <button class="app-button"></button>
+            <p>app</p>
           </div>
           <div class="app-icon">
-          <img src="placeholder-icon25.png" alt="">
-          <p>App 25</p>
+          <img src="icon.png" alt="">
+          <button class="app-button"></button>
+          <p>app</p>
         </div>
     </div>
-
-
-
-
-    
+  </div>
 </div>
-    <div class="iphone-footer"></div>
+
+    <div class="iphone-footer normal-content"></div>
+   
   </div>
 
-
-  <script src="scripts.js"></script>
+  
 </body>
+
+
+
 </html>
