--- a/compliant.html
+++ b/compliant.html
@@ -7,18 +7,10 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       background-color: #fff;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .container {
-      width: 600px; /* Fixed width for the outer container */
-      background-color: #333;
-      box-sizing: border-box;
     }
 
     .header {
@@ -31,27 +23,35 @@
     }
 
     .main-container {
+      width: 500px;
+      height: 800px;
+      margin: auto;
       display: flex;
       flex-direction: column;
+      background-color: #000000;
+      box-sizing: border-box;
     }
 
     .top-half {
-      flex-grow: 3; /* Adjusted to 60% of the container */
+      flex-grow: 2;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content:flex-start;
       border-bottom: 5px solid blue;
+      margin-top: 30px;
     }
 
     .small-rectangle {
-      width: 20px;
-      height: 80px;
-      background-color: #888;
+      width: 50px;
+      height: 300px;
+      background-color: #000000;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: -1px;
+      border: 3px solid rgb(77, 77, 255);
+      border-radius: 10px;
+  
     }
 
     .checkmark {
@@ -73,7 +73,7 @@
     }
 
     .bottom-half {
-      flex-grow: 2; /* Adjusted to 40% of the container */
+      flex-grow: 3;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -84,30 +84,30 @@
       width: calc(100% - 2px);
       height: 20px;
       background-color: #ccc;
-      margin-bottom: -1px;
-      border-bottom: 1px solid blue;
+      margin-bottom: 3px;
+      border-bottom: 3px solid blue;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="main-container">
     <div class="header">Your Original Header</div>
-    <div class="main-container">
-      <div class="top-half">
-        <div class="small-rectangle">
-          <div class="checkmark">✔</div>
-        </div>
-        <div class="heading">Regular Heading</div>
-        <div class="small-heading">Smaller Heading</div>
+    <div class="top-half">
+      <div class="small-rectangle">
+        <div class="checkmark">✔</div>
       </div>
-      <div class="bottom-half">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <!-- Add your content for the bottom half of the main container here -->
-      </div>
+      <div class="heading">Regular Heading</div>
+      <div class="small-heading">Smaller Heading</div>
+    </div>
+    <div class="bottom-half">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <!-- Add your content for the bottom half of the main container here -->
     </div>
   </div>
 </body>
 </html>
+
+
