--- a/whatsintheworks.html
+++ b/whatsintheworks.html
@@ -1,3 +1,31 @@
+   .text-section {
+      margin-right: 90px;/* Adjust the margin as needed */
+      max-width: 300px; /* Adjust the maximum width as needed */
+      flex: 1; /* Allow the text section to grow and fill available space */
+    }
+
+    .text-section-header {
+      font-size: 18px; /* Adjust the font size as needed */
+      font-weight: bold; /* Make the header bold or adjust styling */
+      color: #fff; /* Text color */
+      margin-bottom: 10px; /* Adjust the margin as needed */
+    }
+
+    .text-content {
+      font-size: 14px; /* Adjust the font size as needed */
+      color: #fff; /* Text color */
+      line-height: 1.5; /* Adjust the line height as needed */
+    }
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
