--- a/whatsintheworks.html
+++ b/whatsintheworks.html
@@ -18,7 +18,13 @@
     }
 
 
-
+ <div class="text-section">
+    <div class="text-section-header">Additional Information</div>
+    <div class="text-content">
+      <p>This is a sample text section. You can add more paragraphs or information here.</p>
+      <p>Feel free to customize the content as needed.</p>
+    </div>
+  </div>
 
 
 
